--- a/imgui.ini
+++ b/imgui.ini
@@ -5,8 +5,42 @@ Collapsed=0
 
 [Window][Renderer properties]
 Pos=60,60
-Size=140,284
+Size=409,408
 Collapsed=0
+
+[Window][Choose Model##ChooseModelDlgKey]
+Pos=60,60
+Size=700,400
+Collapsed=0
+
+[Window][Choose Model##ChooseFileDlgKey]
+Pos=60,60
+Size=1112,389
+Collapsed=0
+
+[Table][0xD893679E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2752314D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD7D26904,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x349DB48F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB8816604,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7A25B4BD,4]
+RefScale=13
+Column 0  Sort=0v
 
 [Docking][Data]
 
