Ajustes en Seleccion de OBJ

--- a/imgui.ini
+++ b/imgui.ini
@@ -42,5 +42,17 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x404E537B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x867B7A71,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCD2C58B0,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
 
