--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=409,408
 Collapsed=0
 
 [Window][Choose Model##ChooseModelDlgKey]
-Pos=60,60
+Pos=494,167
 Size=700,400
 Collapsed=0
 
@@ -55,6 +55,22 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xB3D1D7CE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6162A760,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6260878D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC713135F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD60B95DB,4]
 RefScale=13
 Column 0  Sort=0v
 
